[package]
name = "api"
version = "0.1.0"
authors = ["Brandon Blaylock <brandon@null.pub>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
futures = "0.3.4"
log = "0.4.8"
redis = { version = "0.15.1", features = ["tokio-rt-core"] }
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["macros"] }
warp = "0.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
